include/UIGeometry.h

typedef float UIFloat;
typedef struct _UIPoint
{
	UIFloat x, y;
} UIPoint;
typedef struct _UISize
{
	UIFloat width, height;
} UISize;
typedef struct _UIRect
{
	UIPoint origin;
	UISize size;
} UIRect;