python/panosui_c.py


UILabel = struct__UILabel# /usr/local/include/UILabel.h: 6

# /usr/local/include/UILabel.h: 8
if _libs["panosui"].has("UILabelCreate", "cdecl"):
    UILabelCreate = _libs["panosui"].get("UILabelCreate", "cdecl")
    UILabelCreate.argtypes = [UIRect]
    UILabelCreate.restype = POINTER(UILabel)

# /usr/local/include/UILabel.h: 10
if _libs["panosui"].has("UILabelSetContents", "cdecl"):
    UILabelSetContents = _libs["panosui"].get("UILabelSetContents", "cdecl")
    UILabelSetContents.argtypes = [POINTER(UILabel), String]
    UILabelSetContents.restype = None

# /usr/local/include/UILabel.h: 11
if _libs["panosui"].has("UILabelSetFontSize", "cdecl"):
    UILabelSetFontSize = _libs["panosui"].get("UILabelSetFontSize", "cdecl")
    UILabelSetFontSize.argtypes = [POINTER(UILabel), UIFloat]
    UILabelSetFontSize.restype = None

# /usr/local/include/UILabel.h: 12
if _libs["panosui"].has("UILabelSetFontColor", "cdecl"):
    UILabelSetFontColor = _libs["panosui"].get("UILabelSetFontColor", "cdecl")
    UILabelSetFontColor.argtypes = [POINTER(UILabel), UIColor]
    UILabelSetFontColor.restype = None

# /usr/local/include/UILabel.h: 13
if _libs["panosui"].has("UILabelSizeToFit", "cdecl"):
    UILabelSizeToFit = _libs["panosui"].get("UILabelSizeToFit", "cdecl")
    UILabelSizeToFit.argtypes = [POINTER(UILabel)]
    UILabelSizeToFit.restype = None

# /usr/local/include/UILabel.h: 15
if _libs["panosui"].has("UILabelGetContents", "cdecl"):
    UILabelGetContents = _libs["panosui"].get("UILabelGetContents", "cdecl")
    UILabelGetContents.argtypes = [POINTER(UILabel)]
    UILabelGetContents.restype = c_char_p

# /usr/local/include/UILabel.h: 16
if _libs["panosui"].has("UILabelGetFontSize", "cdecl"):
    UILabelGetFontSize = _libs["panosui"].get("UILabelGetFontSize", "cdecl")
    UILabelGetFontSize.argtypes = [POINTER(UILabel)]
    UILabelGetFontSize.restype = UIFloat

# /usr/local/include/UILabel.h: 17
if _libs["panosui"].has("UILabelGetFontColor", "cdecl"):
    UILabelGetFontColor = _libs["panosui"].get("UILabelGetFontColor", "cdecl")
    UILabelGetFontColor.argtypes = [POINTER(UILabel)]
    UILabelGetFontColor.restype = UIColor

_UIPoint = struct__UIPoint# /usr/local/include/UIGeometry.h: 10

_UISize = struct__UISize# /usr/local/include/UIGeometry.h: 15

_UIRect = struct__UIRect# /usr/local/include/UIGeometry.h: 21

_UIAnimation = struct__UIAnimation# /usr/local/include/UIAnimation.h: 20

_UITransaction = struct__UITransaction# /usr/local/include/UIAnimation.h: 27

_UIApplication = struct__UIApplication# /usr/local/include/UIApplication.h: 7

_UIApplicationDelegate = struct__UIApplicationDelegate# /usr/local/include/UIApplication.h: 12

_UIColor = struct__UIColor# /usr/local/include/UIColor.h: 3

_UILayer = struct__UILayer# /usr/local/include/UILayer.h: 25

_UIEventResponder = struct__UIEventResponder# /usr/local/include/UIEventResponder.h: 13

_UIView = struct__UIView# /usr/local/include/UIView.h: 12

_UIWindow = struct__UIWindow# /usr/local/include/UIWindowController.h: 5

_UIWindowController = struct__UIWindowController# /usr/local/include/UIWindowController.h: 15

_UIEvent = struct__UIEvent# /usr/local/include/UIWindow.h: 18

_UILabel = struct__UILabel# /usr/local/include/UILabel.h: 6

# No inserted files

# No prefix-stripping

